--- a/.github/workflows/pr-ci.yaml
+++ b/.github/workflows/pr-ci.yaml
@@ -18,6 +18,6 @@ jobs:
       - name: Checkout to the repo
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Run tests
         run: npm run test
