--- a/.github/workflows/pr-ci.yaml
+++ b/.github/workflows/pr-ci.yaml
@@ -18,6 +18,10 @@ jobs:
       - name: Checkout to the repo
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: npm install
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: install
       - name: Run tests
-        run: npm run test
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: test
