add build to ci/cd

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -31,6 +31,10 @@ jobs:
         uses: borales/actions-yarn@v2.3.0
         with:
           cmd: test
+      - name: Run build
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: build
       - name: Store my-artifact
         uses: actions/upload-artifact@v2
         with:
@@ -59,6 +63,10 @@ jobs:
           node-version: ${{matrix.node-version}}
       - name: Checkout to the repo
         uses: actions/checkout@v2
+      - name: Run build
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: build
       - name: Download my-artifact
         uses: actions/download-artifact@v2
         with:
