--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -48,7 +48,7 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: my-github-actions-test #Must be unique in Heroku
           heroku_email: papamafii2@gmail.com
-          appdir: build
+          buildpack: true
 
   deploy-stage:
     environment:
@@ -77,5 +77,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: my-stage-github-actions-test #Must be unique in Heroku
           heroku_email: papamafii2@gmail.com
-          appdir: build
+          buildpack: true
 
